--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "dayjs": "^1.11.18",
     "formik": "^2.4.6",
     "framer-motion": "^12.23.24",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
     "lodash": "^4.17.21",
     "next": "15.5.6",
     "react": "19.1.0",
