Refactor and clean up imports, update ESLint rules
This commit updates ESLint rules to enforce errors for unused variables and duplicate imports, and removes unused or redundant imports across multiple components for cleaner code. It also refactors some component props and logic, simplifies theme and provider usage, and enables the response interceptor in the HTTP service for better error handling.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,10 @@
 {
-  "extends": ["next/core-web-vitals"],
+  "extends": [
+    "next/core-web-vitals"
+  ],
   "rules": {
-    "no-unused-vars": "false",
-    "no-duplicate-imports": "false",
-    "import/no-duplicates": "false"
+    "no-unused-vars": "error",
+    "no-duplicate-imports": "error",
+    "import/no-duplicates": "error"
   }
 }
