--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.2.0",
     "recharts": "^3.3.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "simplebar-react": "^3.3.2",
+    "stylis": "^4.3.6",
     "stylis-plugin-rtl": "^2.1.1",
     "swiper": "^12.0.3",
     "tinycolor2": "^1.6.0",
