--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "prod": "next build && next start",
     "lint": "next lint"
   },
+  "overrides": {
+    "react-quill": {
+      "react": "$react"
+    }
+  },
   "dependencies": {
     "@bprogress/next": "^3.2.12",
     "@emotion/cache": "^11.14.0",
