--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@next/third-parties": "^15.5.6",
     "@reduxjs/toolkit": "^2.9.1",
     "@tanstack/react-query": "^5.90.5",
+    "@tinymce/tinymce-react": "^6.3.0",
     "apexcharts": "^5.3.5",
     "axios": "^1.12.2",
     "dayjs": "^1.11.18",
@@ -36,7 +37,6 @@
     "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
-    "react-quill": "^2.0.0",
     "react-redux": "^9.2.0",
     "recharts": "^3.3.0",
     "redux-logger": "^3.0.6",
@@ -45,7 +45,6 @@
     "stylis": "^4.3.6",
     "stylis-plugin-rtl": "^2.1.1",
     "swiper": "^12.0.3",
-    "tinycolor2": "^1.6.0",
     "yup": "^1.7.1"
   },
   "devDependencies": {
