--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.4",
     "lodash": "^4.17.21",
-    "next": "15.5.6",
-    "react": "19.1.0",
+    "next": "^16.0.7",
+    "react": "^19.2.1",
     "react-apexcharts": "^1.8.0",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.2.1",
     "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
