Add blog, pages, and location dashboard modules
Introduces new dashboard modules for managing blog posts, blog categories, pages, cities, countries, states, and Europe. Adds corresponding page wrappers, drawers, and table row components. Updates menu configuration and main dashboard exports to include new modules. Also adds ESLint rule for react-hooks/exhaustive-deps.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
   "rules": {
     "no-unused-vars": "warn",
     "no-duplicate-imports": "warn",
-    "import/no-duplicates": "warn"
+    "import/no-duplicates": "warn",
+    "react-hooks/exhaustive-deps": "warn"
   }
 }
